--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -27,8 +27,8 @@ $nav-bg: #e2e2e2!default;
 $examples-bg: #2E3336 !default;
 $code-bg: #1E2224 !default;
 $code-annotation-bg: #191D1F !default;
-$nav-subitem-bg: #1E2224 !default;
-$nav-active-bg: #0F75D4 !default;
+$nav-subitem-bg: #093b60 !default;
+$nav-active-bg: #e22726 !default;
 $nav-active-parent-bg: #1E2224 !default; // parent links of the current section
 $lang-select-border: #000 !default;
 $lang-select-bg: #1E2224 !default;
