--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -29,7 +29,7 @@ $code-bg: #1E2224 !default;
 $code-annotation-bg: #191D1F !default;
 $nav-subitem-bg: #f1f1f1 !default;
 $nav-active-bg: #e22726 !default;
-$nav-active-parent-bg: #093b60 !default; // parent links of the current section
+$nav-active-parent-bg: #e2e2e2 !default; // parent links of the current section //bex blue #093b60
 $lang-select-border: #000 !default;
 $lang-select-bg: #1E2224 !default;
 $lang-select-active-bg: $examples-bg !default; // feel free to change this to blue or something
@@ -46,7 +46,7 @@ $search-notice-bg: #c97a7e !default;
 $main-text: #333 !default; // main content text color
 $nav-text: #000 !default;
 $nav-active-text: #fff !default;
-$nav-active-parent-text: #fff !default; // parent links of the current section
+$nav-active-parent-text: #000 !default; // parent links of the current section
 $lang-select-text: #fff !default; // color of unselected language tab text
 $lang-select-active-text: #fff !default; // color of selected language tab text
 $lang-select-pressed-text: #fff !default; // color of language tab text when mouse is pressed
