--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -29,7 +29,7 @@ $code-bg: #1E2224 !default;
 $code-annotation-bg: #191D1F !default;
 $nav-subitem-bg: #f1f1f1 !default;
 $nav-active-bg: #e22726 !default;
-$nav-active-parent-bg: #e2e2e2 !default; // parent links of the current section //bex blue #093b60
+$nav-active-parent-bg: #f1f1f1 !default; // parent links of the current section //bex blue #093b60
 $lang-select-border: #000 !default;
 $lang-select-bg: #1E2224 !default;
 $lang-select-active-bg: $examples-bg !default; // feel free to change this to blue or something
