Added a custom scss entry

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -92,6 +92,10 @@ $nav-footer-border-color: #666 !default;
 $search-box-border-color: #666 !default;
 
 
+// CUSTOM
+////////////////////
+$aside-warning-text: #fff !default;
+
 ////////////////////////////////////////////////////////////////////////////////
 // INTERNAL
 ////////////////////////////////////////////////////////////////////////////////
