--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -94,7 +94,7 @@ $search-box-border-color: #666 !default;
 
 // CUSTOM
 ////////////////////
-$aside-warning-text: #fff !default;
+$aside-notice-text: #fff !default;
 
 ////////////////////////////////////////////////////////////////////////////////
 // INTERNAL
