Extended screen.scss to include some font colour handling within the aside html sections

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -95,6 +95,8 @@ $search-box-border-color: #666 !default;
 // CUSTOM
 ////////////////////
 $aside-notice-text: #fff !default;
+$aside-warning-text: $main-text !default;
+$aside-success-text: $main-text !default;
 
 ////////////////////////////////////////////////////////////////////////////////
 // INTERNAL
