--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -467,14 +467,17 @@ html, body {
     margin-top: 1.5em;
     margin-bottom: 1.5em;
     background: $aside-notice-bg;
+	color: $aside-notice-text;
     line-height: 1.6;
 
     &.warning {
       background-color: $aside-warning-bg;
+	  color: $aside-warning-text;
     }
 
     &.success {
       background-color: $aside-success-bg;
+	  color: $aside-success-text;
     }
   }
 
